--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,11 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
+
     <main class="main">
+      <include src="./partials/hellosec.html"></include>
+      <include src="./partials/latest.html"></include>
+
       <script type="module" src="./index.js"></script>
     </main>
   </body>
